k8s/altair/apps/gitea/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: gitea-http
  namespace: gitea
spec:
  type: ClusterIP
  selector:
    app: gitea
  ports:
    - name: http
      port: 3000
      targetPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: gitea-ssh
  namespace: gitea
spec:
  type: LoadBalancer
  selector:
    app: gitea
  ports:
    - name: ssh
      port: 222
      targetPort: 22
