k8s/altair/apps/gitea/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: gitea
  namespace: gitea
spec:
  entryPoints: [websecure]
  routes:
    - match: Host(`gitea.greedo.net`)
      kind: Rule
      services:
        - name: gitea-http
          port: 3000
  tls:
    secretName: greedo-net-wildcard-tls
